Handle padding and border correctly for reflow states constructed without a parent (reflow roots, things inside nsIBoxes).  b=366952  r+sr=roc, r=bzbarsky